# code

./: .gitattributes  .gitignore  README.md
Ace/: .bentoignore  .dockerignore  .editorconfig  .env.example  .envrc  .gitignore  .yaml-lint.yml  Dockerfile.jinja2  Makefile  README.md  bentoml_configuration.yaml  docker-compose.test.yml  docker-compose.yml  justfile  pyproject.toml  requirements-all.txt  requirements-dev.in  requirements.in  sonar-project.properties  starlette_oauth2_api.py
Ace/.circleci/: config.yml  services.yml
Ace/.github/workflows/: lint.yml  test.yml
Ace/abstract_ranking/: background_tasks.py  base_logic.py  config.py  context.py  input.py
Ace/abstract_ranking/two_tower/: __init__.py  artefacts_service.py  model_artifacts.py  names.py  transformer_encoder_layer.py
Ace/ace/: __init__.py  api_server.py  asyncio.py  auth.py  enums.py  log.py  ml.py  model_log.py  newrelic.py  perf.py  service.py
Ace/ace/bentoml/: catboost.py  http_api_server.py  model_runner.py  server.py
Ace/ace/configs/: base.yaml  config.py  manager.py  prod.yaml  qa.yaml  test.yaml  test_prod.yaml  test_qa.yaml
Ace/ace/storage/: db.py  s3.py
Ace/charts/item-lifecycle/: Chart.yaml  values-prod.yaml  values-qa.yaml  values.yaml
Ace/charts/menu-item-ranking/: Chart.yaml  values-prod.yaml  values-qa.yaml  values.yaml
Ace/charts/nba/: Chart.yaml  values-prod.yaml  values-qa.yaml  values.yaml
Ace/charts/ultron/: Chart.yaml  values-prod.yaml  values-qa.yaml  values.yaml
Ace/charts/vendor-ranking/: Chart.yaml  values-prod.yaml  values-qa.yaml  values.yaml
Ace/fixtures/db/: all_items_embeddings_metadata.sql  chain_embeddings_for_two_tower_v2.sql  chain_embeddings_for_two_tower_v22.sql  chain_embeddings_for_two_tower_v23.sql  chain_embeddings_for_two_tower_v3.sql  inference_features_for_two_tower_v2.sql  inference_features_for_two_tower_v22.sql  (+18 more)
Ace/item_lifecycle/: __init__.py  bentofile.yaml  input.py  requirements-all.txt  requirements.in  requirements.txt  service.py
Ace/load_tests/: api.js  package-lock.json  package.json  ultron.js
Ace/menu_item_ranking/: __init__.py  app.py  artefacts_service.py  artefacts_service_registry.py  base_logic.py  bentofile.yaml  context.py  model_artifacts.py  requirements.in  requirements.txt  service.py  settings.py
Ace/models/: ultron-cross-encoder-tokenizer.bentomodel  vendor_ranking-personalized-v1.bentomodel  vendor_ranking-personalized-v1_20230430.bentomodel  vendor_ranking-personalized-v1_20230520.bentomodel  vendor_ranking-personalized-v1_20230630.bentomodel  vendor_ranking-personalized-v1_20230731.bentomodel  vendor_ranking-personalized-v1_20230831.bentomodel  vendor_ranking-personalized-v1_20230930.bentomodel  vendor_ranking-personalized-v1_20231031.bentomodel
Ace/nba/: __init__.py  app.py  base_logic.py  bentofile.yaml  data.py  input.py  justfile  newrelic-agent.ini  requirements-all.txt  requirements-dev.in  requirements.in  requirements.txt  service.py
Ace/scripts/: cut_parquet_files.py
Ace/tests/: conftest.py
Ace/ultron/: __init__.py  bentofile.yaml  data.py  input.py  logic.py  newrelic-agent.ini  requirements-dev.in  requirements.in  requirements.txt  service.py
Ace/vendor_ranking/: __init__.py  base_logic.py  bentofile.yaml  context.py  data.py  input.py  newrelic-agent.ini  requirements-dev.in  requirements.txt  service.py  settings.py
data-timeseries-forecast-tool/: .gitignore  .pylintrc  Makefile  README.md  mkdocs.yml  pyproject.toml
data-timeseries-forecast-tool/docs/: calendar.md  index.md  mix.md  reactive.md
data-timeseries-forecast-tool/timeseries_forecast_tool/: _helpers.py
(+774 files in other folders)
